# PickliPy

./: .gitignore  Assay picklist generator.ips  Assay.py  Assay_picklist_generator.md  README.md  Screening picklist generator.ips  Screening_picklist_generator.md  __init__.py  _config.yml  assaypicklist.wls  blank_assay_design_file.xlsx  blank_screen_design_file.xlsx  common.py  figure_assay_design_file.xlsx  figure_screen_design_file.xlsx  install PickliPy.ips  install_PickliPy.md  pyproject.toml  requirements.txt  screeningpicklist.wls  visualize.ipynb
.agents/skills/picklipy-excel-design-skill/: README.md  SKILL.md
.agents/skills/picklipy-excel-design-skill/agents/: openai.yaml
.agents/skills/picklipy-excel-design-skill/examples/: assay_dose_response_spec.json  screen_shortlist_spec.json
.agents/skills/picklipy-excel-design-skill/references/: layout_recipes.md  picklipy_schema_and_design.md  troubleshooting.md
.agents/skills/picklipy-excel-design-skill/scripts/: picklipy_design_builder.py
PickliPy/: Assay.py  Assay_working.py  Bluetable.py  Bluetable_first iteration.py  Scramble.py  Screen.py  Visualize.py  bluetable_picklist.py  common.py  randomization.py
PickliPy-QC/: .gitignore  README.md  picklipy_qc.py
PickliPy-QC/v1/: v1_picklipy_qc.py
PickliPy-QC/v2/: v2_README.md  v2_picklipy_qc.py
